--- a/Localization/en/sandbox.json
+++ b/Localization/en/sandbox.json
@@ -2,10 +2,10 @@
     "menu.play": "Play",
     "menu.settings": "Settings",
     "menu.quit": "Quit",
+    "mode.twoplayers": "Two Players",
     "settings.color": "Paddle Color:",
     "settings.sensitivity": "Sensitivity:",
     "lobby.title": "Lobby",
-    "lobby.game": "Game:",
     "lobby.mode": "Mode:",
     "lobby.invitefriend": "Invite a friend!",
     "lobby.settings.privacy": "Lobby Privacy:",
