--- a/Localization/ru/sandbox.json
+++ b/Localization/ru/sandbox.json
@@ -2,10 +2,10 @@
     "menu.play": "Играть",
     "menu.settings": "Настройки",
     "menu.quit": "Выйти",
+    "mode.twoplayers": "Два Игрока",
     "settings.color": "Цвет Ракетки:",
     "settings.sensitivity": "Чувствительность:",
     "lobby.title": "Лобби",
-    "lobby.game": "Игра:",
     "lobby.mode": "Режим:",
     "lobby.invitefriend": "Пригласи друга!",
     "lobby.settings.privacy": "Приватность Лобби:",
@@ -16,13 +16,13 @@
     "lobby.settings.ballacceleration.false": "Выкл.",
     "lobby.settings.reset": "Сбросить Настройки",
     "lobby.settings.nothost": "Вы не хост",
-    "lobby.waitingforhost": "Ожидание хоста",
+    "lobby.waitingforhost": "Ожидание хоста...",
     "lobby.changecolor": "Сменить Цвет",
     "lobby.leave": "Уйти",
     "menu.back": "Назад",
     "hud.bot": "Бот",
     "menu.resume": "Продолжить",
-    "menu.resetball": "Сбросить мяч",
+    "menu.resetball": "Сброс мяча",
     "gameover.title": "Конец Игры!",
     "gameover.results": "Результаты:",
     "gameover.playagain": "Сыграть снова",
